[package]
name = "ensure"
version = "0.1.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
edition = "2018"
description = "Ensure target state of an object"
repository = "https://github.com/jpastuszek/ensure"
readme = "README.md"
keywords = ["state"]
categories = ["data-structures"]
license = "MIT"

[dev-dependencies]
assert_matches = "1.3.0"
