[package]
name = "ensure"
version = "0.2.1-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
edition = "2018"
description = "Ensure target state of an object"
repository = "https://github.com/jpastuszek/ensure"
readme = "README.md"
keywords = ["state"]
categories = ["data-structures"]
license = "MIT"
